--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -124,16 +124,16 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 \section*{Introduction}
 
-    Representing an ecological community as a network summarises both species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition such as alpha diversity. A network framework combines this tabulation of nodes with a list of interactions (links between nodes) so that networks provide additional, higher-order information on community structure. Despite this additional information, empirical descriptions of ecological networks are usually limited to static representations of the communities they describe. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
+    Representing an ecological community as a network summarises both species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition such as alpha diversity. A network framework combines this tabulation of nodes with a list of interactions (links between nodes) so that networks provide additional, higher-order information on community structure. Despite this additional information, empirical descriptions of ecological networks are still often limited by a lack of data or tools to adequately incorporate variation in interactions into networks. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
 
 
-    The assumption of static communities contrasts with the known stochasticity of ecological communities~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a}, and between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}. Worse, variability in community composition and interactions may not be closely related. The removal of a species from a site will obviously also remove its interactions but, conversely, the co-occurrence of potentially interacting species does not guarantee that the species will interact at a given place and time. Interactions can be lost if the interaction partners remain present but are separated in time or are too rare to detect each other~\citep{Tylianakis2010}. Interactions can also fail to occur because of environmental contingencies~\citep{Poisot2015}, or because of individual preferences~\citep{Fodrie2015}. 
+    The assumption of static communities contrasts with the known stochasticity of ecological communities~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a}, and between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}. Worse, variability in community composition and interactions may not be closely related. The removal of a species from a site will obviously also remove its interactions but, conversely, the co-occurrence of potentially interacting species does not guarantee that the species will interact at a given place and time. Interactions can be lost if the interaction partners remain present but are separated in time or are too rare to detect each other~\citep{Tylianakis2010}. Interactions can also fail to occur because of environmental contingencies~\citep{Poisot2015} or individual preferences~\citep{Fodrie2015}. 
 
 
-    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to document interactions than species~\citep{Poisot2012}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Poisot2016}. Early work in this vein includes food-web models using likelihood-based approaches~\citep{Allesina2008} or Gaussian~\citep{Williams2010} or binomial~\citep{Rohr2016} probability functions for each possible interaction. These models may include information about species' traits~\citep{Rohr2016} or attempt to reproduce empirical network structures using a set of simple rules~\citep{Allesina2008,Williams2010}.
+    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to document interactions than species~\citep{Poisot2012,Bartomeus,others}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Poisot2016}. Early work in this vein includes food-web models using likelihood-based approaches~\citep{Allesina2008} or Gaussian~\citep{Williams2010} or binomial~\citep{Rohr2016} probability functions for each possible interaction. These models may include information about species' traits~\citep{Rohr2016} or attempt to reproduce empirical network structures using a set of simple rules~\citep{Allesina2008,Williams2010}.
 
 
-    Despite these efforts, we currently lack the quantitative methodology to deal with uncertainty generated by spatiotemporal variation in ecological interactions and by limited sampling. Even in well-sampled networks, uneven sampling across species can lead to the inference that some species do not interact because they co-occur rarely or have not yet been observed together - even if they do interact when they do co-occur (see Fig.~\ref{histograms}). Nearly all network studies will thus neglect some interactions, necessitating an approach that acknowledges this uncertainty.
+    Despite these efforts, we currently lack the quantitative methodology to deal with uncertainty generated by spatiotemporal variation in ecological interactions and by limited sampling. [[cite previous attempts]] Even in well-sampled networks, uneven sampling across species can lead to the inference that some species do not interact because they co-occur rarely or have not yet been observed together - even if they do interact when they do co-occur (see Fig.~\ref{histograms}). Nearly all network studies will thus neglect some interactions, necessitating an approach that acknowledges this uncertainty.
 
 
     In this study, we formalise the description of interactions between species as probabilities and develop analytical tools to capture the uncertainty in the estimation of these interactions. We focus on binary interactions as a first step, but the framework could be expanded to deal with interaction frequencies or strengths. To define the problem, we first identify different contributions to the uncertainty of an interaction and discuss the implications of each source of uncertainty for the properties of ecological networks. 
@@ -141,28 +141,37 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     \subsection*{Why do some interactions \emph{not} occur?}
 
-      We start from the perspective of a community ecologist faced with the task of describing a previously unknown interaction network. This ecologist will be interested in generating a description of the species/nodes present and the links between them~\citep{Roslin2016}.  Importantly, the information sought is conveyed by both the presence and \emph{absence} of links. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. The detection of any interaction is a stochastic process. We define three nested levels of uncertainty contributing to this stochasticity: interaction uncertainty, process uncertainty, and detection uncertainty (Fig.~\ref{conceptual_fig}).
+      We start from the perspective of a community ecologist faced with the task of describing a previously unknown interaction network. This ecologist will be interested in generating a description of the species/nodes present and the links between them~\citep{Roslin2016}.  Importantly, the information sought is conveyed by both the presence and \emph{absence} of links. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. In terms of the ones and zeros in a binary interaction matrix, we know that the ones are true but we cannot be sure that the zeros reflect interactions which actually do not occur. The detection of any interaction is a stochastic process. As a conceptual guide to the factors affecting this process, we describe three nested levels of uncertainty: interaction uncertainty, process uncertainty, and detection uncertainty (Fig.~\ref{conceptual_fig}). These levels roughly address the questions: "Could species $i$ and $j$ interact?", "Do they interact at this site/time?" and "Do we observe the interaction?".
 
 
         \subsubsection*{Interaction uncertainty} 
 
-          First, and most fundamentally, a pair of species may or may not have the appropriate characteristics (or traits) to interact. We define the probability of an interaction $L$ given characteristics $\mathbf{T}$ as $P(L | \mathbf{T})=\lambda$. Some species pairs, such as a salmon and a saguaro cactus, have incompatible traits and would never interact even if they should co-occur. In such cases, $\lambda = 0$ and there is no uncertainty. 
+          First, and most fundamentally, some interactions are feasible if a pair of species should co-occur while others are not. Assuming that the feasibility of interactions depends on the traits of species involved, we can define the probability of an interaction $L$ given some description of trait-matching $\mathbf{T}$ as $P(L | \mathbf{T})=\lambda$~\citep{Dom?}. In some cases the traits prohibiting an interaction are known. A potential prey may be too large, small, or well-armoured for a predator to attack, or it might be toxic or non-nutritious (e.g., large carnivores do not consume plants because they cannot digest them and typically do not consume small insects because of the large handling cost relative to the energy gained from tiny prey). Where the critical traits are known and mean that an interaction is unfeasbile, $\lambda = 0$ and there is no uncertainty about associated zeros in an interaction matrix.
 
 
-          Most species pairs, however, do not have traits that absolutely prevent an interaction. This means that it is generally unclear whether an unobserved interaction is impossible or simply a rare phenomenon with $\lambda>0$. This uncertainty is partly addressed by trait-matching models in which species with better-matched traits are more likely to interact~\citep{Bartomeus2016}. As these models improve and include better information about the influence of traits on interactions, the uncertainty will be reduced and $\lambda$ should either tend to 0 or to 1. Nevertheless, every model is imperfect and lacks information that could be used to define constraints on interactions~\citep{Dormann2017}. Some interaction uncertainty is therefore inevitable.
+          In most cases, however, it is not known what traits might prohibit an interaction~\citep{Dormann2017}. Pollinators may visit plants outside of those predicted based on "pollination syndromes"~\citep{} and herbivores may consume animal prey when it becomes accessible~\citep{}. These examples show that we often cannot say that an interaction absolutely does not occur. Instead, an unobserved interaction may be a rare phenomenon with $\lambda>0$ and an associated zero in an interaction matrix might be false. This uncertainty is partly addressed by trait-matching models in which species with better-matched traits are more likely to interact~\citep{Bartomeus2016}. As these models improve and include better information about the influence of traits on interactions, the uncertainty will be reduced and $\lambda$ should either tend to 0 or to 1. Nevertheless, every model is imperfect and lacks information that could be used to define constraints on at least some interactions~\citep{Dormann2017}. Until these gaps are filled, some interaction uncertainty will remain.
 
 
-        \subsubsection*{Process uncertainty} 
-
-         Even a feasible interaction, i.e. $L=1$, still may not occur at a given location or moment in time because of local constraints such as inclement weather or unsuitable habitat. We define the local realisation of an interaction, $X$, given that the interaction is feasible, as a stochastic process with associated probability $P(X|L=1)=\chi$. This phenomenon of interaction contingencies is usually not considered in network studies, but there is a rich literature in community ecology  on the topic. Phenological matching~\citep{MillerRushing2010,Gezon2016}, species preferences~\citep{Pires2011,Novak2015,Coux2016}, and fear effects~\citep{Luttbeg2005,Wirsing2008} are just some of the factors contributing to variation in the frequency of interactions between a given pair of species. Some of these factors can be addressed in mesocosm studies of networks (e.g., environmental conditions can be held stable) or could be included in models along the line of trait-matching models (e.g., phenological matching). In the field, however, process uncertainty is likely inevitable.
+          Note that interaction uncertainty does not depend upon whether species $i$ and $j$ actually co-occur. Ecologists are often interested in predicting which species are likely to interact following an introduction~\citep{} or range shift~\citep{}. In such cases, models based on trait matching can give some information about $\lambda$ while past co-occurance will, of course, not yield much insight.
 
 
-         One proposed solution to the problem of process uncertainty is to use repeated sampling of networks. For example,~\citet{Weinstein2017} used repeated sampling to estimate the daily probability of detecting an interaction and thereby model detection and process uncertainty. While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), or very rare interactions which might not occur on any of the sampling days. Moreover, the faster accumulation of species than interactions means that repeated sampling will tend to introduce more unobserved interactions than observed interactions unless the number of samples is very high~\citep{Poisot2012}.
+        \subsubsection*{Process uncertainty} [[Maybe need to rename]]
+
+          Assuming that an interaction is feasible (i.e., $L=1$; species traits do not prohibit an interaction if they should co-occur), an interaction still not occur at a particular place or time. This could be because the two species do not co-occur or, if they did occur, because constraints such as inclement weather or low abundance prevented the interaction. For example, a pollination interaction may not occur on a rainy day or a rare galler may not parasitize a rare plant because they do not encounter each other. 
+          We can define the local realisation of an interaction, $X$, given that the interaction is feasible, as a stochastic process with associated probability $P(X|L=1)=\chi$. It is unlikely that $\chi$=1 except in the case of obligate specialists who always interact whenever they co-occur and always co-occur. When $\chi<1$ we cannot be sure whether an unobserved interaction did not occur and when it occurred but was not observed.
+
+          This phenomenon of interaction contingencies is usually not considered in network studies, but there is a rich literature in community ecology  on the topic. Phenological matching~\citep{MillerRushing2010,Gezon2016}, species preferences~\citep{Pires2011,Novak2015,Coux2016}, and fear effects~\citep{Luttbeg2005,Wirsing2008} are just some of the factors contributing to variation in the frequency of interactions between a given pair of species. Some of these factors can be addressed in mesocosm studies of networks (e.g., environmental conditions can be held stable) or could be included in models along the line of trait-matching models (e.g., phenological matching). Expanding sampling to cover a broader spatial or temporal range (e.g., sampling in a variety of microhabitats or during a variety of weather conditions) will also help to reduce process uncertainty if resource constraints permit. In the field, however, process uncertainty is likely inevitable as long as local conditions are not constant during sampling.
+
+
+         % One proposed solution to the problem of process uncertainty is to use repeated sampling of networks. For example,~\citet{Weinstein2017-wrong one?} used repeated sampling to estimate the daily probability of detecting an interaction and thereby model detection and process uncertainty.[[This apparently confused R3]] While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), or very rare interactions which might not occur on any of the sampling days. Moreover, the faster accumulation of species than interactions means that repeated sampling will tend to introduce more unobserved interactions than observed interactions unless the number of samples is very high~\citep{Poisot2012}.
 
 
         \subsubsection*{Detection uncertainty} 
 
-          Lastly, measurement errors are a pervasive source of uncertainty in the observation of ecological processes. Even if an interaction is feasible and occurs during sampling ($L = 1$ and $X = 1$), we may still fail to detect it. We may define the probability of detecting of an interaction, $D$, given the interaction is feasible and occurs, as a stochastic process with the associated probability $P(D|X=1,L=1)=\delta$. Detection failure could happen for many reasons (see~\citet{Wirta2014} for examples and partial solutions to them). Some sources of detection error can be minimised with appropriate sampling effort ($\delta$ will approach one with increasing number of samples), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification as in~\citealt{Wirta2014,Frost2016}). The absence of an interaction on a given day could therefore be because it was not feasible [$P(L) = 0$], was feasible but did not occur because of local conditions during sampling ($P(X|L=1) = 0$], or was feasible and occurred during sampling but could not be observed [$P(D|X=1,L=1)=0$]. Because we cannot separate these possibilities, repeated sampling fails to satisfactorily address the uncertainty inherent in empirical networks.
+          Lastly, measurement errors are a pervasive source of uncertainty in the observation of ecological processes. Even if an interaction is feasible and occurs during sampling ($L = 1$ and $X = 1$), we may still fail to detect it. We may define the probability of detecting of an interaction, $D$, given the interaction is feasible and occurs, as a stochastic process with the associated probability $P(D|X=1,L=1)=\delta$. Detection failure could happen for many reasons (see~\citet{Wirta2014} for examples and partial solutions to them). Some sources of detection error can be minimised with appropriate sampling effort ($\delta$ will approach one with increasing number of samples), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification as in~\citealt{Wirta2014,Frost2016}). Some types of interactions will have higher detection uncertainty than others (e.g., pollination or predation often take place very quickly while parasitism can last for months or years). Even long-term interactions, however, can be missed, especially if species are difficult to identify or if not all individuals of a species share the interaction. Parasites, for example, are often concentrated in only a few individuals~\citep{Lagrue2017}. If these infected individuals do not happen to be included in a sample, their interactoins will be missed.
+
+
+          To sum up, the absence of an interaction on a given day could therefore be because it was not feasible [$P(L) = 0$], was feasible but did not occur because of local conditions during sampling ($P(X|L=1) = 0$], or was feasible and occurred during sampling but could not be observed [$P(D|X=1,L=1)=0$]. Note that some exteral factors can affect both process and detection uncertainty. For example, rare species are less likely to interact at a given site due to neutral processes (process uncertainty)~\citep{}. Interactions involving rare species are also less likely to be detected (detection uncertainty), unless more sampling effort is focused on rare than common species~\citep{}. Similarly, bad weather can make interactions such as pollination less likely by reducing pollinator activity~\citep{}. For those pollinators which do venture forth in poor conditions, bad weather might also reduce visibility and therefore increase detection uncertainty.
 
 
     \subsection*{Estimating detection and process uncertainty}
